<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ciudades"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_bienvenida"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:padding="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/bGuanatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/texto_boton_guanatos"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/bCdmx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/texto_boton_cdmx"
        android:textSize="20sp"/>

</LinearLayout>