<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <TextView
            android:id="@+id/uiGrados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_grados"
            android:textSize="100sp"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/uiCiudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_ciudad"

            android:textSize="30sp"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/uiEstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_estatus"

            android:textSize="20sp"
            android:layout_gravity="center"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>